--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Country App</title>
+    <title>Brew Dog App</title>
     <script src='index.js'></script>
   </head>
   <body>
-    <h1>Countries</h1>
-    <ul id='country-list'>
+    <h1>Brew Dog Beers</h1>
+    <ul id='beer-list'>
     </ul>
   </body>
 </html>
